# padmy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-bake.hcl  pyproject.toml  run.py
.circleci/: config.yml
.github/workflows/: ci.yml  publish.yml  tag-release.yml
docker/: Dockerfile
docker/pg-13/: Dockerfile
docker/pg-14/: Dockerfile
docker/pg-15/: Dockerfile
docker/pg-16/: Dockerfile
docker/pg-17/: Dockerfile
padmy/: __init__.py  __main__.py  compare.py  config.py  db.py  env.py  logs.py  run.py  utils.py
padmy/anonymize/: __init__.py  anonymize.py
padmy/migration/: __init__.py  config.py  create_files.py  db.sql  migration.py  new_sql.py  reorder.py  run.py  utils.py
padmy/sampling/: __init__.py  network.py  sampling.py  viz.py
tests/: conftest.py  docker-compose.yml  test_anonymize.py  test_config.py  test_db.py  test_run.py  test_sampling.py  test_schema_diff.py  test_utils.py  utils.py
tests/migration/: conftest.py  test_migrations.py  test_utils.py
tests/static/: config.yml  init-pg.sh  setup.sql
tests/static/migrations/invalid/: 1-00000000.diff
tests/static/migrations/invalid-multiple/: 1-00000000-down.sql  1-00000000-up.sql  2-00000001-down.sql  2-00000001-up.sql
tests/static/migrations/invalid-simple/: 1-00000000-down.sql  1-00000000-up.sql  1-00000000.diff
tests/static/migrations/valid/: 2-00000001-down.sql  2-00000001-up.sql
tests/static/migrations/valid-skip/: 1-00000000-down.sql  1-00000000-up.sql  2-00000001-down.sql
