[tool.poetry]
name = "padmy"
version = "0.12.0"
description = ""
authors = ["andarius <julien.brayere@tracktor.fr>"]

[tool.poetry.dependencies]
python = ">=3.12,<4"
piou = ">=0.13.4,<1.0.0"
asyncpg = ">=0.29.0"
PyYAML = ">=6.0"
typing-extensions = ">=4.3.0"
networkx = { version = ">=3.1.0", optional = true }
dash = { version = ">=2.6.0", optional = true }
dash-cytoscape = { version = ">=0.3.0", optional = true }
Faker = ">=13.15.1,<14.0.0"
tracktolib = { version = ">=0.47" }
pytz = { version = "^2024.1", python = "<3.12" }

[tool.poetry.extras]
network = ["networkx", "dash", "dash-cytoscape"]

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.370"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
deepdiff = "^5.8.1"
ruff = "^0.5.0"
psycopg = "^3.1.12"
tracktolib = { version = ">=0.47", extras = ["pg-sync"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=padmy -s -q -x"
testpaths = [
    "tests"
]
python_files = "*.py"

[tool.pyright]
include = ["padmy", "tests"]
exclude = []

pythonVersion = "3.12"
pythonPlatform = "Linux"
useLibraryCodeForTypes = true

[tool.poetry.scripts]
cli = 'run:run'


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.12.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "release $current_version → $new_version [skip ci]"


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = [
    # imported but unused
    "F401",
    # unable to detect undefined names
    "F403",
    #
    "F405"
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
