[project]
name = "padmy"
version = "0.22.0"
authors = [
    { email = "julien.brayere@tracktor.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "piou >=0.21.0,<1.0.0",
    "asyncpg >=0.29.0,<1.0.0",
    "PyYAML >=6.0.2,<7.0",
    "typing-extensions >=4.3.0",
    "Faker >=13.15.1,<14.0.0",
    "tracktolib >=0.42.1,<1.0.0",
    "pytz >=2024.1,<2025.0 ; python_version < '3.12'"
]


[dependency-groups]
dev = [
    "pytest >=9.0.1,<10.0.0",
    "pytest-cov >=7.0.0,<8.0.0",
    "pyright >=1.1.407,<2.0.0",
    "ruff >=0.14.5,<1.0.0",
    "deepdiff >=8.6.1,<9",
    "tracktolib >=0.46.0,<1.0.0",
    "psycopg >=3.2.12,<4.0.0",
    "pre-commit>=4.4.0",
]

network = [
    "networkx >=3.1.0,<4.0.0",
    "dash >=2.6.0,<3.0.0",
    "dash-cytoscape >=0.3.0,<1.0.0"
]

bump = [
    "commitizen >=4.10.0,<5"
]
notebook = [
    "jupyterlab>=4.4.10",
]



[project.scripts]
padmy = "padmy:run"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "padmy"
module-root = ""

[tool.pytest.ini_options]
addopts = "--cov=padmy -s -q -x"
testpaths = [
    "tests"
]
python_files = "*.py"

[tool.pyright]
include = ["padmy", "tests"]
exclude = []

pythonVersion = "3.13"
pythonPlatform = "Linux"
useLibraryCodeForTypes = true


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.22.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]
bump_message = "release $current_version → $new_version [skip ci]"


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    # imported but unused
    "F401",
    # unable to detect undefined names
    "F403"
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
